@@ -1,22 +1,17 @@
 package com.zzs.malldemo.controller;
 
-import com.alibaba.fastjson.JSON;
+import com.alibaba.fastjson.JSONObject;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.zzs.malldemo.config.MallParamsConfig;
 import com.zzs.malldemo.vo.LoginParams;
-import com.zzs.malldemo.vo.WxJSONObjectParamsVo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.client.RestTemplate;
-import sun.misc.BASE64Decoder;
 
-import javax.crypto.Cipher;
-import javax.crypto.spec.IvParameterSpec;
-import javax.crypto.spec.SecretKeySpec;
 import java.io.IOException;
 
 /**
@@ -24,7 +19,7 @@ import java.io.IOException;
  * @date 2020/12/25 11:28
  */
 @RestController
-@RequestMapping("/login")
+@RequestMapping("/wxlogin")
 public class LoginController {
 
 
@@ -34,8 +29,11 @@ public class LoginController {
     @Autowired
     private MallParamsConfig mallParamsConfig;
 
-    @PostMapping("/user")
-    public LoginParams login(String jsCode) throws IOException {
+    @PostMapping("/getSessionKeyAndOpenid")
+    public LoginParams login(@RequestBody String jsCode) throws IOException {
+        JSONObject jsonObject = JSONObject.parseObject(jsCode);
+        jsCode = (String) jsonObject.get("jsCode");
+        System.out.println("jsCode = " + jsCode);
         String uri = "https://api.weixin.qq.com/sns/jscode2session?appid=" + mallParamsConfig.getAppId() + "&secret=" + mallParamsConfig.getAppAsecret() + "&js_code=%s&grant_type=authorization_code";
         ResponseEntity<String> respString = restTemplate.getForEntity(String.format(uri, jsCode), String.class);
         String body = respString.getBody();
@@ -46,13 +44,14 @@ public class LoginController {
 
     /**
      * 解密
+     *
      * @param encryptedData 加密数据
-     * @param iv    加密算法的初始向量
+     * @param iv            加密算法的初始向量
      * @param sessionKey    会话密钥
      * @return
      * @throws Exception
      */
-    @GetMapping("/decodeUserInfo")
+   /* @GetMapping("/decodeUserInfo")
     public WxJSONObjectParamsVo decodeUserInfo(String encryptedData, String iv, String sessionKey) throws Exception {
         encryptedData = encryptedData.replaceAll(" ", "+");
         System.out.println(encryptedData);
@@ -60,25 +59,24 @@ public class LoginController {
         System.out.println(sessionKey);
         String jsonStr = new String("");
         WxJSONObjectParamsVo wxJSONObjectParamsVo = null;
-        try {
-            BASE64Decoder base64Decoder = new BASE64Decoder();
-            byte[] encryptedByte = base64Decoder.decodeBuffer(encryptedData);
-            byte[] sessionKeyByte = base64Decoder.decodeBuffer(sessionKey);
-            byte[] ivByte = base64Decoder.decodeBuffer(iv);
+        //            BASE64Decoder base64Decoder = new BASE64Decoder();
+//            byte[] encryptedByte = base64Decoder.decodeBuffer(encryptedData);
+//            byte[] sessionKeyByte = base64Decoder.decodeBuffer(sessionKey);
+//            byte[] ivByte = base64Decoder.decodeBuffer(iv);
+        Base64.Decoder decoder = Base64.getDecoder();
+        byte[] encryptedByte = decoder.decode(encryptedData);
+        byte[] sessionKeyByte = decoder.decode(sessionKey);
+        byte[] ivByte = decoder.decode(iv);
 
-            SecretKeySpec keySpec = new SecretKeySpec(sessionKeyByte, "AES");
-            Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
-            IvParameterSpec ivParameterSpec = new IvParameterSpec(ivByte);
+        SecretKeySpec keySpec = new SecretKeySpec(sessionKeyByte, "AES");
+        Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
+        IvParameterSpec ivParameterSpec = new IvParameterSpec(ivByte);
 
-            cipher.init(Cipher.DECRYPT_MODE, keySpec, ivParameterSpec);
-            byte[] doFinal = cipher.doFinal(encryptedByte);
-            jsonStr = new String(doFinal);
-            wxJSONObjectParamsVo = JSON.parseObject(jsonStr, WxJSONObjectParamsVo.class);
-            System.out.println("wxJSONObjectParamsVo" + wxJSONObjectParamsVo);
-        } catch (IOException e) {
-            e.printStackTrace();
-            System.out.println(e.getMessage());
-        }
+        cipher.init(Cipher.DECRYPT_MODE, keySpec, ivParameterSpec);
+        byte[] doFinal = cipher.doFinal(encryptedByte);
+        jsonStr = new String(doFinal);
+        wxJSONObjectParamsVo = JSON.parseObject(jsonStr, WxJSONObjectParamsVo.class);
+        System.out.println("wxJSONObjectParamsVo" + wxJSONObjectParamsVo);
         return wxJSONObjectParamsVo;
-    }
+    }*/
 }
